# Patnic-CLI

./: Cargo.toml  ChangeLog.md  startPatnicRoom.sh
src/: backup_menue.rs  concatted_menue.rs  distribution_menue.rs  helpers.rs  main.rs  menue.rs  synchronice_menue.rs  ui.rs
