[package]
name = "DevCLI"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "*"
clap = "*"
structopt = "*"
crossterm = "0.18"
fs_extra = "1.2.0"
git2 = "*"
curl = "*"

[dependencies.cursive]
version = "0.11"
default-features = false
features = ["crossterm-backend"]
chrono = "0.4"