[package]
name = "DevCLI"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
tui-logger = "0.7"
tui = "0.17"
tui-input = "*"
crossterm = "0.23"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"